# docs/swagger.json
@@ -55,7 +55,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/crawler.CorrectPayload"
+                            "$ref": "#/definitions/crawler.Payload"
                         }
                     }
                 ],
@@ -63,7 +63,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/crawler.ResponseCrawlDTO"
+                            "$ref": "#/definitions/crawler.ResponseDTO"
                         }
                     }
                 }
@@ -84,7 +84,45 @@
                 }
             }
         },
-        "crawler.CorrectPayload": {
+        "crawler.DetailsResponseDTO": {
+            "type": "object",
+            "properties": {
+                "correctUrl": {
+                    "type": "string",
+                    "example": "http://ufape.edu.br"
+                },
+                "modified": {
+                    "$ref": "#/definitions/crawler.URLDetails"
+                },
+                "original": {
+                    "$ref": "#/definitions/crawler.URLDetails"
+                }
+            }
+        },
+        "crawler.LinksResponse": {
+            "type": "object",
+            "properties": {
+                "available": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "http://ufape.edu.br/link-valido"
+                    ]
+                },
+                "unavailable": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "http://ufape.edu.br/link-quebrado"
+                    ]
+                }
+            }
+        },
+        "crawler.Payload": {
             "type": "object",
             "required": [
                 "url"
@@ -129,45 +167,7 @@
                 }
             }
         },
-        "crawler.DetailsResponseDTO": {
-            "type": "object",
-            "properties": {
-                "correctUrl": {
-                    "type": "string",
-                    "example": "http://ufape.edu.br"
-                },
-                "modified": {
-                    "$ref": "#/definitions/crawler.URLDetails"
-                },
-                "original": {
-                    "$ref": "#/definitions/crawler.URLDetails"
-                }
-            }
-        },
-        "crawler.LinksResponse": {
-            "type": "object",
-            "properties": {
-                "available": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "http://ufape.edu.br/link-valido"
-                    ]
-                },
-                "unavailable": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "example": [
-                        "http://ufape.edu.br/link-quebrado"
-                    ]
-                }
-            }
-        },
-        "crawler.ResponseCrawlDTO": {
+        "crawler.ResponseDTO": {
             "type": "object",
             "properties": {
                 "contentType": {
